# etude-kas-gstreamer

./: Cargo.toml  LICENSE  README.md
src/: image.rs  main.rs  menu.rs  video.rs
