[package]
name = "kas-gstreamer-etude"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kas = { version = "0.13.0", features = [] }
tiny-skia-path = "0.8.2"                            # from IntSize from tiny_skia::Pixmap::from_vec from kas-resvc env_logger = "0.10.0"
env_logger = "0.10.0"
gstreamer = "0.20.6"
gstreamer-app = "0.20.0"
log = "0.4.18"
num-rational = "0.4.1"
num-traits = "0.2.15"
rfd = "0.11.4"
thiserror = "1.0.40"
tokio = { version = "1.28.2", features = ["full"] }
url = "2.4.0"
